# meeting-mind

./: . npmignore  README.md  check_pbar.py  convert_pcm_to_wav.py  docker-compose.yml  inspect_model_output.py  main.py  package-lock.json  package.json  pyproject.toml  reproduce_issue.py  reproduce_partial.py  test_ws_connect.py
.agent/workflows/: minih.md
meeting_mind/: .dockerignore  Dockerfile  README.md  convert_mp3_to_wav.py  download_models.py  requirements.txt  test_api.py  test_engine.py  test_llm_api.py  test_local.py  test_remote_asr.js  verify_vllm.py
meeting_mind/app/: main.py
meeting_mind/app/api/v1/: router.py
meeting_mind/app/api/v1/endpoints/: llm.py  meeting.py  stream.py
meeting_mind/app/core/: config.py  config.py.bak  lock_manager.py  logger.py
meeting_mind/app/schemas/: meeting.py  protocol.py
meeting_mind/app/services/: asr_engine.py  cloud_asr.py  llm_engine.py  session_mgr.py
meeting_mind/tests/: test_asr_drift.py  test_integration.py  test_lock.py  test_websocket.py  test_websocket_refactor.py  test_websocket_stream.py
meeting_web/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
meeting_web/src/: App.css  App.jsx  index.css
meeting_web/src/components/: HistoryPage.jsx  Modal.jsx  OnboardingGuide.jsx  ParticleBackground.jsx  RecorderPage.jsx  WaveformVisualizer.jsx
meeting_web/src/utils/: audio-processor.js  websocket-client.js
scripts/: upload_file.py
