[project]
name = "meeting-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.0",
    "funasr>=1.2.7",
    "loguru>=0.7.3",
    "modelscope>=1.32.0",
    "noisereduce>=3.0.3",
    "numpy<2",
    "openai>=2.9.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "websockets==10.4",
]
